[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/hotbar/HotbarSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/hotbar/Hotbar.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Hotbar" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 268.0
margin_top = 536.0
margin_right = -268.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotbarSlot" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 48.0

[node name="HotbarSlot2" parent="." instance=ExtResource( 1 )]
margin_left = 56.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 48.0

[node name="HotbarSlot3" parent="." instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 8.0
margin_right = 144.0
margin_bottom = 48.0

[node name="HotbarSlot4" parent="." instance=ExtResource( 1 )]
margin_left = 152.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 48.0

[node name="HotbarSlot5" parent="." instance=ExtResource( 1 )]
margin_left = 200.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 48.0

[node name="HotbarSlot6" parent="." instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 48.0

[node name="HotbarSlot7" parent="." instance=ExtResource( 1 )]
margin_top = 8.0
margin_bottom = 48.0

[node name="HotbarSlot8" parent="." instance=ExtResource( 1 )]
margin_left = 344.0
margin_top = 8.0
margin_right = 384.0
margin_bottom = 48.0

[node name="HotbarSlot9" parent="." instance=ExtResource( 1 )]
margin_left = 392.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 48.0

[node name="HotbarSlot10" parent="." instance=ExtResource( 1 )]
margin_left = 440.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 48.0
[connection signal="gui_input" from="HotbarSlot" to="." method="_on_HotbarSlot_gui_input"]
[connection signal="gui_input" from="HotbarSlot2" to="." method="_on_HotbarSlot2_gui_input"]
[connection signal="gui_input" from="HotbarSlot3" to="." method="_on_HotbarSlot3_gui_input"]
[connection signal="gui_input" from="HotbarSlot4" to="." method="_on_HotbarSlot4_gui_input"]
[connection signal="gui_input" from="HotbarSlot5" to="." method="_on_HotbarSlot5_gui_input"]
[connection signal="gui_input" from="HotbarSlot6" to="." method="_on_HotbarSlot6_gui_input"]
[connection signal="gui_input" from="HotbarSlot7" to="." method="_on_HotbarSlot7_gui_input"]
[connection signal="gui_input" from="HotbarSlot8" to="." method="_on_HotbarSlot8_gui_input"]
[connection signal="gui_input" from="HotbarSlot9" to="." method="_on_HotbarSlot9_gui_input"]
[connection signal="gui_input" from="HotbarSlot10" to="." method="_on_HotbarSlot10_gui_input"]
